FIX: dashboard 반응형, 관심 종목 overflow 설정

--- a/sieve/sieve/static/autostock/css/balance.css
+++ b/sieve/sieve/static/autostock/css/balance.css
@@ -1,3 +1,9 @@
+.balance-title {
+    font-size: 12px;
+    font-weight: bold;
+    color: #006efc;
+}
+
 .balance-table {
     width: 100%;
     background: white;
@@ -5,9 +11,15 @@
     border: 1px solid rgba(238, 238, 238, 0.75);
     box-sizing: border-box;
     border-radius: 3px;
+    font-size: 12px;
 }
 
 .balance-thead {
+    text-align: center;
     background: rgba(238, 238, 238, 0.75);
     border-radius: 3px 3px 0px 0px;
+}
+
+.balance-tbody td {
+    padding-left: 7px;
 }
