--- a/sieve/sieve/static/autostock/css/dashboard.css
+++ b/sieve/sieve/static/autostock/css/dashboard.css
@@ -21,6 +21,7 @@
 .flex-container {
     width: 100%;
     display: flex;
+    /* height: 40vh; */
     flex-direction: row;
     flex-wrap: wrap;
     flex-flow: row wrap;
@@ -33,7 +34,7 @@
     flex: 1 1 80%;
 }
 
-@media (min-width: 870px) {
+@media (min-width: 1100px) {
     .wrapper-border {
         width: 60vw;
         padding: 20px;
@@ -43,10 +44,12 @@
     }
     .flex-container {
         width: 100%;
+        height: 41vh;
     }
     .flex-item {
         display: block;
         width: 50%;
+        height: 100%;
         flex: 1 1 40%;
     }
 }
